<resources>
    <string name="app_name">Challenger</string>
    <string name="current">Current Distance</string>
    <string name="monthlyMiles">Miles Per Month</string>
    <string name="days">Days From Pace</string>
    <string name="permission_rationale">Access to your location is needed to use Google Fit data.</string>
    <string name="ok">OK</string>
    <string name="neededDaily">Needed Daily This Month</string>
    <string name="needed">Needed This Month</string>
    <string name="monthly">monthly</string>

</resources>
