<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.freestyletech.challenger.MainActivity"
    android:id="@+id/main_activity_view">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/monthlyMiles"
        android:id="@+id/monthly_label"
        android:layout_marginTop="74dp"
        android:labelFor="@+id/monthly" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current"
        android:id="@+id/current_label"
        android:labelFor="@+id/current"
        android:layout_below="@+id/monthly"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/current"
        android:layout_alignTop="@+id/current_label"
        android:layout_alignStart="@+id/monthly" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/needed"
        android:id="@+id/needed_label"
        android:layout_below="@+id/current_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/needed"
        android:layout_alignTop="@+id/needed_label"
        android:layout_alignStart="@+id/monthly" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/neededDaily"
        android:id="@+id/neededDaily_label"
        android:labelFor="@+id/neededDaily"
        android:layout_below="@+id/needed_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/neededDaily"
        android:layout_alignTop="@+id/neededDaily_label"
        android:layout_alignStart="@+id/monthly" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/days"
        android:id="@+id/days_label"
        android:labelFor="@+id/days"
        android:layout_below="@+id/neededDaily_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/days"
        android:layout_alignTop="@+id/days_label"
        android:layout_alignStart="@+id/monthly" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:inputType="number"
        android:id="@+id/monthly"
        android:layout_marginEnd="53dp"
        android:layout_alignBaseline="@+id/monthly_label"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
